# Tirocinio

./: .gitignore  README
Lib/: functions.c
fw2_custom_deca/: README  README.md  a.h  main.c  ss_init_main.c  utils.h
fw2_custom_deca/master_spi_com/: README.md  dwm_spi_master.c  dwm_spi_master.h  main.c
kalman_filter/: README.md  kalman_filter.c  kalman_filter.py  ukf.md
lib/: dwm_func.c  dwm_func.h  esempi.txt  main.c  pers_func.c  pers_func.h  quick_func.c  quick_func.h
libreria/: CMakeLists.txt
libreria v.2/: CMakeLists.txt  README.md
libreria v.2/include/: dwm_master.h
libreria v.2/src/: dwm_master.c
libreria/include/: README.md  dwm_master.h
libreria/src/: dwm_master.c  dwm_utilities.c
libreria/src/include/: dwm_utilities.h
test/: CMakeLists.txt
test/include/: dwm_master.h  main.h
test/src/: dwm_master.c  main.c
topologia/: README.md  main.c  topologia.c  topologia.h
ukf_c/: README.md  ukf.c  ukf.h
